# pololu-rs

./: .gitignore  .gitmodules  404.html  Cargo.toml  Embed.toml  LICENSE  README.md  README_BUILD_SYSTEM.md  Sharing important info  TODO.md  config.yaml  index.html  log.csv  mkdocs.yml  run  search.html  sitemap.xml
.cargo/: config.toml
.github/workflows/: build.yaml
Debug/: error_plot.py  plot_pi_control.py
Legacy Code/: diffdrive.rs  math_legacy.rs
ROS/: requirements.txt
ROS/mqtt-tracking-system/: .gitignore  mqtt_to_ros_bridge.py  plot_poses.py  requirements.txt
ROS/mqtt-tracking-system/dashboard/public/: index.html
ROS/src/: mqtt_to_ros_bridge.py
ROS/src/pololu_ros/: CMakeLists.txt  package.xml
ROS/src/pololu_ros/config/: mocap_broadcast.yaml
ROS/src/pololu_ros/launch/: motion_capture_tracking_launch.py
ROS/src/pololu_ros/src/: controller_interface.cpp  mocap_broadcast.cpp  teleop.cpp
ROS/src/wmr_controller/: setup.py
ROS/src/wmr_controller/launch/: ann-cmcgs_launch.py  wmr_controller_launch.py
ROS/src/wmr_controller/scripts/: cmcgs_plan
ROS/src/wmr_controller/wmr_controller/: reference_publisher_example.py  timing_monitor.py  wmr_controller_node.py
ROS/src/wmr_controller/wmr_controller.egg-info/: SOURCES.txt
TRAJs/: TRJ0001.JSN  TRJ0002.JSN  TRJ0003.JSN  TRJ0004.JSN  TRJ0005.JSN  TRJ0009.JSN
cfg/: ROBOTCFG.CFG  ROBOTCFG_3Pi.CFG
datavis/: TR00  TR02  TR23  TR34  TR36  TR37  TR38  TR40  TR42  TR43  clean_trajectory.py  decode_and_plot_logs.sh  decode_binary.py  display_data.py  display_trajectory.sh  generate_circle.py  mocap_compare.py  my_display.py  obstacles.yaml  plot_pololu_log_standalone.py  plot_pololu_log_standalone_py.py  visualize_jsn.py  visualize_multirobot_trajectory.py  visualize_trajectory_v2.py  visualize_trajectory_v3.py
datavis/tuning-10-09-2025/: TR00  TR13  TR14  TR15  TR16  TR19  TR20  TR25
debugging/: index.html
docs/: build.md  debugging.md  hardware.md  index.md  quickstart.md  ros.md  software.md  troubleshooting.md  usage.md
firmware/: Embed.toml  README_BUILD_SYSTEM.md  run
firmware/TRAJs/: TRJ0004.JSN  TRJ0005.JSN  TRJ0008.JSN
firmware/cfg/: ROBOTCFG_3Pi.CFG  ROBOTCFG_ZUMO.CFG
firmware/src/: control_types.rs  diffdrive.rs  ekf.rs  encoder.rs  encoder_lib.rs  goto.rs  imu.rs  init.rs  inner_controller.rs  joystick_control.rs  led.rs  lib.rs  main.rs  motor.rs  odometry.rs  orchestrator_signal.rs  packet.rs  parameter_sync.rs  read_robot_config_from_sd.rs  robotstate.rs  sdlog.rs  trajectory_control.rs  trajectory_signal.rs  trajectory_uart.rs  uart.rs  uart_parser.rs  verbosity.rs
firmware/src/imu/: madgwick.rs
firmware/src/setpoint/: mod.rs  providers.rs
ground_robots_ros/: .gitignore  .gitmodules  README.md
ground_robots_ros/src/pololu_ros/config/: teleop.yaml
ground_robots_ros/src/pololu_ros/src/: mocap_broadcast.cpp  teleop.cpp
hardware/: index.html
install/: local_setup.sh  setup.sh
install/crazyflie/lib/crazyflie/: aideck_streamer.py  battery  cfmult.py  chooser.py  comCheck  console  crazyflie_server  crazyflie_server.py  downloadUSDLogfile  flash.py  gui.py  listLogVariables  listMemories  listParams  log  reboot  scan  setParam  simple_mapper_multiranger.py  teleop  vel_mux.py  version
install/crazyflie/share/crazyflie/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/crazyflie_examples/lib/crazyflie_examples/: arming  cmd_full_state  figure8  group_mask  hello_world  infinite_flight  multi_trajectory  nice_hover  set_param  swap
install/crazyflie_py/share/crazyflie_py/: package.sh  (+1 more)
log/: latest_build
mqtt-tracking-system/: .config.yaml.swp  README.md  client.py  config.yaml  homography.npy  homography.py  mqtt_to_ros_bridge.py  server.py
mqtt-tracking-system/dashboard/: package.json  server.js
mqtt-tracking-system/logs/: poses_20260309_174629.csv  poses_20260309_183037.csv  poses_20260309_183218.csv  poses_20260309_183912.csv  poses_20260309_184042.csv  poses_20260309_184143.csv  poses_20260309_184948.csv  poses_20260309_185110.csv  poses_20260309_185122.csv  poses_20260309_185228.csv  poses_20260309_185351.csv  poses_20260309_185959.csv
pololu_ros/: CMakeLists.txt  package.xml
pololu_ros/config/: teleop.yaml
pololu_ros/launch/: teleop_launch.py
pololu_ros/src/: teleop.cpp
quickstart/: index.html
ros/: index.html
search/: search_index.json
software/: index.html
src/: button.rs  buzzer.rs  buzzer_utils.rs  diffdrive.rs  diffdrive_cascade.rs  encoder.rs  encoder_lib.rs  goto.rs  hackathon.rs  imu.rs  imu_state.rs  init.rs  joystick_control.rs  joystick_control_3pi.rs  joystick_control_zumo.rs  led.rs  lib.rs  main.rs  math.rs  motor.rs  mqtt_to_ros_bridge.py  odometry.rs  orchestrator_signal.rs  packet.rs  parameter_sync.rs  pwm_motor.rs  read_robot_config_from_sd.rs  robot_config.rs  robot_parameters_default.rs  robotstate.rs  sdlog.rs  test_utils.rs  trajectory_control.rs  trajectory_control_odometry.rs  trajectory_reading.rs  trajectory_signal.rs  trajectory_uart.rs  uart.rs  uart_irq.rs  uart_nrf52_pk_rec.rs
src/buzzer/: mod.rs
src/encoder/: mod.rs  pio_encoder.rs  pio_encoder_old.rs
src/imu/: complementary_filter.rs  lis3mdl.rs  lsm6dso.rs  madgwick.rs  shared_i2c.rs
src/mocap_to_robots/: CMakeLists.txt
src/mocap_to_robots/src/: mocap_to_robots.cpp
src/motor/: motor.rs
src/pololu_ros/: CMakeLists.txt
src/pololu_ros/config/: controller_interface.yaml
src/pololu_ros/launch/: controller_interface_launch.py  full_system_launch.py  mocap_broadcast_launch.py
src/pololu_ros/src/: controller_interface.cpp  mocap_broadcast.cpp  teleop.cpp
src/uart/: mod.rs  uart.rs
src/wmr_controller/: README.md  package.xml  setup.py
src/wmr_controller/launch/: ann-cmcgs_launch.py  wmr_controller_launch.py
src/wmr_controller/scripts/: cmcgs_ctrl
src/wmr_controller/wmr_controller/: __init__.py  ann_cmcgs_node.py  cmcgs_ctrl.py  cmcgs_plan.py  wmr_controller_node.py
src/wmr_controller/wmr_controller.egg-info/: PKG-INFO  entry_points.txt
troubleshooting/: index.html
usage/: index.html
(+648 files in other folders)
