[package]
edition = "2024"
name = "pololu3pi2040-rs"
version = "0.1.0"
authors = ["Wolfgang Hoenig <hoenig@tu-berlin.de>"]
resolver = "2"

[[bin]]
name = "pololu3pi2040-rs"
test = false
bench = false

[dependencies]
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"



embassy-executor = { version = "0.7", features = ["task-arena-size-2048", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = [] }
embassy-rp = { version = "0.4", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }

log = "0.4"
embassy-usb = { version = "0.4.0" }
embassy-usb-logger = { version = "0.4.0" }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
