<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wmr_controller</name>
  <version>0.0.1</version>
  <description>MPC controller for wheeled mobile robots with mocap feedback</description>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>motion_capture_tracking_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
